# raytracer

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  coverage.xml  pyproject.toml
src/raytracer/: __init__.py  intersection.py  ray.py  regions.py
tests/: test_ray.py  test_regions.py
